<resources>
    <string name="app_name">Query</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="mnav_home_item">Home</string>
    <string name="mnav_explore_item">Explore</string>
    <string name="mnav_sources_item">Sources</string>
    <string name="mnav_search_group">Search</string>
    <string name="mnav_more_group">More</string>
    <string name="mnav_archive_item">Archive</string>
    <string name="mnav_history_item">History</string>
    <string name="mnav_info_group">Info</string>
    <string name="mnav_about_item">About</string>
    <string name="mnav_settings_item">Settings</string>
    <string name="mnav_help_feedback_item">Help and Feedback</string>
    <string name="mnav_profiles_item">Profiles</string>
</resources>